# project_median_of_3

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  median.cpp  median.h
tests/: CMakeLists.txt  main.cpp
tests/tm/: tm.cpp  tm.h
